pdg_autovec: add tarjan-scc implementation for pdg
Signed-off-by: zhaosiying12138 <neucszhaopeng2016@163.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,7 @@
         "stdexcept": "cpp",
         "stop_token": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "list": "cpp"
     }
 }
