pdg_autovec: add clue code to pass the analysis result to KLEE executor
Signed-off-by: zhaosiying12138 <neucszhaopeng2016@163.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/bin/klee",
-            "args": ["${workspaceFolder}/zsy_test/test1.bc"],
+            "args": ["${workspaceFolder}/zsy_test/demo2_3.ll"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/build/bin",
             "environment": [],
